# ResearchX

./: .gitignore  AGENTS.md  README.md
ResearchX/: DISCOVERY.md  SKILL.md
ResearchX/agents/: openai.yaml
ResearchX/assets/: architecture_diagrams.md
ResearchX/mcp-server/: claude_desktop_config.json  gpt_builder.json  package.json  pyproject.toml  researchx_mcp_server.py
ResearchX/references/: 01_research_design.md  02_writing_templates.md  03_search_queries.md
ResearchX/scripts/: analyze_methods.py  generate_visuals.py
