[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "researchx-mcp"
version = "1.0.0"
description = "ResearchX MCP Server — AI Research Operating System for the full scientific lifecycle"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "research", "scientific", "paper-analysis", "literature-review", "research-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/xingguangYan/ResearchX"
Repository = "https://github.com/xingguangYan/ResearchX.git"
"Bug Tracker" = "https://github.com/xingguangYan/ResearchX/issues"

[project.scripts]
researchx-mcp = "researchx_mcp_server:main"

[tool.setuptools.packages.find]
include = ["researchx_mcp_server*"]
